# office-forge-orchestrator

./: .gitignore  CLAUDE.md  Makefile  README.md  projects.conf
.claude/skills/doc-organize/: SKILL.md
.claude/skills/doc-search/: SKILL.md
.claude/skills/email-triage/: SKILL.md
.claude/skills/invoice-processing/: SKILL.md
.devcontainer/: devcontainer.json
config/: env.example  projects.conf
docs/: codespaces.md  pat-scoping.md
mcp/: README.md  accounting.json  crm.json  documents.json  productivity.json
memory/: pyproject.toml
memory/src/doc_memory/: __init__.py  cli.py
memory/src/doc_memory/chunk/: __init__.py  chunker.py
memory/src/doc_memory/embed/: __init__.py  embedder.py
memory/src/doc_memory/index/: __init__.py  page_index.py  tree.py
memory/src/doc_memory/parser/: __init__.py  base.py  claude.py  docling.py  markitdown.py
memory/src/doc_memory/retrieve/: __init__.py  hybrid.py  vector.py
memory/tests/: test_chunker.py  test_cli.py  test_embedder.py  test_hybrid.py  test_page_index.py  test_parser_base.py  test_parser_claude.py  test_parser_docling.py  test_parser_markitdown.py  test_tree.py  test_vector.py
scripts/: generate-tasks.sh  load-projects.sh  run.sh  sessions.sh  status.sh
templates/: README.md
templates/client-engagement/: .mcp.json  CLAUDE.md  README.md
